--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My First Cool Webpage</title>
+    <meta charset="UTF-8">
+    <title>My First Portfolio</title>
 </head>
 <body>
-  <!-- Headings -->
-  <h1>Welcome to My Portfolio</h1>
-  <h2>About Me</h2>
-  <h3>My Journey</h3>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-  <!-- Paragraphs -->
-  <p>Hello! My name is Boluwatife, and this is my very first webpage.</p>
-  <p>I’m currently learning HTML basics and how to structure web content properly.</p>
-  <p>My goal is to become a skilled developer and build awesome projects.</p>
-  <p>Thank you for visiting this page. More exciting updates will come soon!</p>
+    <main>
+        <article>
+            <h1>Welcome to My Portfolio</h1>
+            <p>Hello! My name is Boluwatife, and this is my very first webpage as part of my portfolio project.</p>
+            <h2>About Me</h2>
+            <p>I enjoy learning web development and exploring how technology can create solutions to everyday problems.</p>
+            <h3>My Journey</h3>
+            <p>Every day I learn something new about coding, design, and problem-solving. It’s exciting and challenging!</p>
+            <p>This website will showcase my progress as I grow into a skilled developer.</p>
+            <a href="https://www.alxafrica.com" target="_blank">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+            </a>
+        </article>
 
-  <!-- Clickable Image -->
-  <a href="https://www.alxafrica.com/" target="_blank">
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
-  </a>
-  <a href="tweets.html">Check out my Tweets</a>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by Boluwatife - <a href="https://github.com/Desimeon" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
