--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -2,24 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Tweets</title>
 </head>
 <body>
-    <h1>My Tweets</h1>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <!-- Embedded Tweet -->
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">
-            Just setting up my twttr
-        </p>&mdash; jack (@jack)
-        <a href="https://twitter.com/jack/status/20">March 21, 2006</a>
-    </blockquote> 
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <main>
+        <article>
+            <h1>My Embedded Tweet</h1>
+            <!-- Replace with any tweet you prefer -->
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Learning never stops! Excited about web development 🚀</p>
+                &mdash; Boluwatife (@example)
+                <a href="https://twitter.com/example/status/1234567890">March 1, 2025</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </article>
 
-    <br>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
 
-    <!-- Link back to homepage -->
-    <a href="index.html">Go back to Homepage</a>
+    <footer>
+        <p>Made by Boluwatife - <a href="https://github.com/Desimeon" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
