--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,38 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>My First Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My First Portfolio</title>
 </head>
 <body>
-    <header>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tweets.html">Tweets</a></li>
-        </ul>
-    </header>
+  <header>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="tweets.html">Tweets</a></li>
+    </ul>
+  </header>
 
-    <main>
-        <article>
-            <h1>Welcome to My Portfolio</h1>
-            <p>Hello! My name is Boluwatife, and this is my very first webpage as part of my portfolio project.</p>
-            <h2>About Me</h2>
-            <p>I enjoy learning web development and exploring how technology can create solutions to everyday problems.</p>
-            <h3>My Journey</h3>
-            <p>Every day I learn something new about coding, design, and problem-solving. It’s exciting and challenging!</p>
-            <p>This website will showcase my progress as I grow into a skilled developer.</p>
-            <a href="https://www.alxafrica.com" target="_blank">
-                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
-            </a>
-        </article>
+  <main>
+    <article>
+      <h1>Welcome to My Portfolio</h1>
+      <h2>About Me</h2>
+      <p>Hello! My name is Boluwatife, and I am learning web development.</p>
+      <h3>My Interests</h3>
+      <p>I enjoy coding, learning new technologies, and solving problems.</p>
+      <p>Here you’ll find my projects, blogs, and more about my journey.</p>
+      <p>Feel free to explore and connect with me!</p>
 
-        <aside>
-            <p>placeholder to add comment thread later</p>
-        </aside>
-    </main>
+      <!-- Clickable Image -->
+      <a href="https://www.alxafrica.com/" target="_blank">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+      </a>
 
-    <footer>
-        <p>Made by Boluwatife - <a href="https://github.com/Desimeon" target="_blank">here</a></p>
-    </footer>
+      <!-- Learners Table -->
+      <h2>Learners Information</h2>
+      <table border="1">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+          </tr>
+        </tbody>
+      </table>
+    </article>
+
+    <aside>
+      <p>placeholder to add comment thread later</p>
+    </aside>
+  </main>
+
+  <footer>
+    <p>Made by Boluwatife - <a href="https://github.com" target="_blank">here</a></p>
+  </footer>
 </body>
 </html>
